# vip-extract-pdf

./: Dockerfile  docker-compose.yml  requirements.txt
api/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
api/api/: app.py
api/api/controllers/: extractDataCarController.py  extractDataHouseController.py
api/api/services/: extractDataCarService.py
app/: app.py
app/controllers/: extractDataCarController.py  extractDataHouseController.py
src/services/: extractDataHouseService.py
